--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-maps": "0.29.4",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
